<resources>
    <string name="app_name">coen390_assignment2</string>
    <string name="add_profile_text_action_button">Add Profile</string>
    <string name="toggle_profiles_display_mode_text">By ID</string>
    <string name="save_text_dialog_fragment">Save</string>
    <string name="cancel_text_dialog_fragment">Cancel</string>
    <string name="surname_dialog_text">Student Surname</string>
    <string name="name_dialog_text">Student Name</string>
    <string name="ID_dialog_text">Student ID</string>
    <string name="GPA_dialog_text">Student GPA</string>
    <string name="user_profile_text">User Profile</string>
    <string name="profile_created_text">Profile created: </string>
    <string name="gpa_text">GPA: </string>
    <string name="id_text">ID: </string>
    <string name="name_text">Name: </string>
    <string name="surname_text">Surname: </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="access_history">Access History</string>
    <string name="delete_profile">Delete Profile</string>
</resources>