<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Views.InsertProfileDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/profile_surname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/surname_dialog_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/profile_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_surname_edit_text"

            android:fontFamily="sans-serif"
            android:hint="@string/name_dialog_text"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/profile_ID_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:ems="10"
            android:hint="@string/ID_dialog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_edit_text"
            android:inputType="number" />

        <EditText
            android:id="@+id/profile_GPA_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_ID_edit_text"
            android:fontFamily="sans-serif"
            android:hint="@string/GPA_dialog_text"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/profile_GPA_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_GPA_edit_text"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/profile_GPA_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_GPA_edit_text"
            android:text="@string/save"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
