<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="?attr/actionBarTheme" />

  <TextView
    android:id="@+id/profileText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/user_profile_text"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:textSize="20sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/surnameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/surname_text"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/surnameTextViewEdit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/nameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name_text"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/nameTextViewText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />
  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/IDText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/id_text"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/IDTextViewText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/GPAText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/gpa_text"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/GPATextViewText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/createdText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/profile_created_text"
      android:paddingBottom="10dp"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/ProfileTextViewText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingStart="10dp"
      android:paddingEnd="10dp"
      android:textSize="20sp" />
  </LinearLayout>


  <ListView
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:id="@+id/accessListView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>
